<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cuisine Picture Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image">Image</string>
    <string name="small_screen">Small Screen</string>
    <string name="usTitle">American</string>
    <string name="usDesc">Burgers, Fries ..</string>
    <string name="inTitle">Indian</string>
    <string name="inDesc">Curry, Samosa ..</string>
    <string name="krTitle">Korean</string>
    <string name="krDesc">Bibimbap, Samgyupsal ..</string>
    <string name="home_page_title">Select a type of cuisine</string>
    <string name="meal_title">Select a meal</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for food items</string>
    <string name="TTS_NA_MSG">Pronunciation feature requires that you have a TextToSpeech Engine installed. Do you want to install it from Google Play Store ?</string>
    <string name="CheckBoxString">Don\'t show this dialog again!</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <string-array name="language_preference">
        <item>Hindi</item>
        <item>Korean</item>
    </string-array>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>
    <string name="meal_dessert">Dessert</string>
    <string name="language_preference">Select Language Preference</string>
    <string name="language_detailed">Select a language that you are more comfortable with.</string>
    <string name="inform_user">Click on the food again to see the details.</string>

</resources>